// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout matches snapshot when in error state 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
        },
        false,
        {
          "paddingHorizontal": 16,
          "paddingVertical": 0,
        },
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Bold",
              "fontSize": 16,
              "fontWeight": 700,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            {
              "textAlign": "center",
            },
          ]
        }
        testID="header-title"
      >
        Test Provider
      </Text>
    </View>
    <View>
      <View
        onLayout={[Function]}
      >
        <TouchableOpacity
          accessible={true}
          activeOpacity={1}
          disabled={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 32,
              "justifyContent": "center",
              "opacity": 1,
              "width": 32,
            }
          }
          testID="checkout-close-button"
        >
          <SvgMock
            color="#121314"
            fill="currentColor"
            height={24}
            name="Close"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </TouchableOpacity>
      </View>
    </View>
  </View>,
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "marginVertical": 60,
                "paddingHorizontal": 60,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "marginVertical": 1,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    [
                      {
                        "fontSize": 38,
                        "marginVertical": 4,
                        "textAlign": "center",
                      },
                      {
                        "color": "#ca3542",
                      },
                    ],
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰅚
              </Text>
            </View>
            <View
              style={
                {
                  "marginVertical": 1,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Bold",
                    "fontSize": 18,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginVertical": 3,
                    "textAlign": "center",
                  }
                }
              >
                fiat_on_ramp_aggregator.error
              </Text>
            </View>
            <View
              style={
                {
                  "marginVertical": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 30,
                      "marginVertical": 2,
                    },
                    {
                      "textAlign": "center",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    {
                      "color": "#686e7d",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                fiat_on_ramp_aggregator.webview_received_error
              </Text>
            </View>
            <View
              style={
                {
                  "marginTop": 30,
                }
              }
            >
              <TouchableOpacity
                accessibilityRole="button"
                accessible={true}
                activeOpacity={1}
                onPress={[Function]}
                onPressIn={[Function]}
                onPressOut={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "backgroundColor": "#121314",
                    "borderRadius": 12,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#ffffff",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  fiat_on_ramp_aggregator.try_again
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>,
]
`;

exports[`Checkout matches snapshot when no URL is provided 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
        },
        false,
        {
          "paddingHorizontal": 16,
          "paddingVertical": 0,
        },
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Bold",
              "fontSize": 16,
              "fontWeight": 700,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            {
              "textAlign": "center",
            },
          ]
        }
        testID="header-title"
      >
        Test Provider
      </Text>
    </View>
    <View>
      <View
        onLayout={[Function]}
      >
        <TouchableOpacity
          accessible={true}
          activeOpacity={1}
          disabled={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 32,
              "justifyContent": "center",
              "opacity": 1,
              "width": 32,
            }
          }
          testID="checkout-close-button"
        >
          <SvgMock
            color="#121314"
            fill="currentColor"
            height={24}
            name="Close"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </TouchableOpacity>
      </View>
    </View>
  </View>,
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "marginVertical": 60,
                "paddingHorizontal": 60,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "marginVertical": 1,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    [
                      {
                        "fontSize": 38,
                        "marginVertical": 4,
                        "textAlign": "center",
                      },
                      {
                        "color": "#ca3542",
                      },
                    ],
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰅚
              </Text>
            </View>
            <View
              style={
                {
                  "marginVertical": 1,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Bold",
                    "fontSize": 18,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginVertical": 3,
                    "textAlign": "center",
                  }
                }
              >
                fiat_on_ramp_aggregator.error
              </Text>
            </View>
            <View
              style={
                {
                  "marginVertical": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 30,
                      "marginVertical": 2,
                    },
                    {
                      "textAlign": "center",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    {
                      "color": "#686e7d",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                fiat_on_ramp_aggregator.webview_no_url_provided
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>,
]
`;

exports[`Checkout renders correctly with valid URL 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
        },
        false,
        {
          "paddingHorizontal": 16,
          "paddingVertical": 0,
        },
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Bold",
              "fontSize": 16,
              "fontWeight": 700,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            {
              "textAlign": "center",
            },
          ]
        }
        testID="header-title"
      >
        Test Provider
      </Text>
    </View>
    <View>
      <View
        onLayout={[Function]}
      >
        <TouchableOpacity
          accessible={true}
          activeOpacity={1}
          disabled={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 32,
              "justifyContent": "center",
              "opacity": 1,
              "width": 32,
            }
          }
          testID="checkout-close-button"
        >
          <SvgMock
            color="#121314"
            fill="currentColor"
            height={24}
            name="Close"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </TouchableOpacity>
      </View>
    </View>
  </View>,
  <View
    allowsInlineMediaPlayback={true}
    enableApplePay={true}
    mediaPlaybackRequiresUserAction={false}
    onHttpError={[Function]}
    onNavigationStateChange={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    paymentRequestEnabled={true}
    source={
      {
        "uri": "https://provider.example.com/widget?test=1",
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
      }
    }
    testID="checkout-webview"
  />,
]
`;
